--- a/server/src/pages/secure/input.astro
+++ b/server/src/pages/secure/input.astro
@@ -2,9 +2,9 @@
 import SecureInput from '../../components/SecureInput.astro';
 import Layout from '../../layouts/Layout.astro';
 
-const searchParams = Object.fromEntries(Astro.url.searchParams);
+const props = Object.fromEntries(Astro.url.searchParams);
 ---
 
 <Layout title="Primer secure input">
-  <SecureInput {...searchParams} />
+  <SecureInput {...props} />
 </Layout>
