--- a/examples/features/cobadged/src/pages/index.astro
+++ b/examples/features/cobadged/src/pages/index.astro
@@ -1,204 +1,54 @@
 ---
-import { createClientSession } from '../api/createClientSession';
 import Layout from '../layouts/Layout.astro';
-
-const { clientToken } = await createClientSession();
-
-const cardNumberId = 'card-number';
-const cardSecurityCodeId = 'card-security-code';
-const cardExpiryId = 'card-expiry';
 ---
 
 <Layout title="Primer example: cobadged">
   <main>
-    <div
-      id="vars"
-      style={{ display: 'none' }}
-      data-client-token={clientToken}
-      data-card-number-id={cardNumberId}
-      data-card-security-code-id={cardSecurityCodeId}
-      data-card-expiry-id={cardExpiryId}
-    >
-    </div>
     <form id="card" action="">
-      <div class="row">
-        <label>
-          Card number
-          <div id={cardNumberId}>
+      <label>
+        Card number
+        <div class="row">
+          <div id="card-number">
             <input disabled placeholder="4321 1234 9876 6789" />
           </div>
-        </label>
-        <div id="card-networks" style={{ display: 'none' }}></div>
-      </div>
+
+          <div id="card-network" class="flow" style={{ display: 'none' }}></div>
+        </div>
+      </label>
+
+      <div id="supported-card-networks" class="flow"></div>
+
       <div class="row">
         <label>
           Expiry date
-          <div id={cardExpiryId}>
+          <div id="card-expiry">
             <input disabled placeholder="01/25" />
           </div>
         </label>
+
         <label>
           Security code
-          <div id={cardSecurityCodeId}>
+          <div id="card-security-code">
             <input disabled placeholder="⏺⏺⏺" />
           </div>
         </label>
       </div>
+
       <label>
         Cardholder name
         <input name="card-name" placeholder="John Doe" />
       </label>
+
       <button>Pay</button>
+
       <div id="error" style={{ display: 'none' }}></div>
     </form>
   </main>
 </Layout>
 
-<script>
-  // import { Primer, type CheckoutStyle } from '@primer-io/checkout-web';
-  import { type CheckoutStyle } from '@primer-io/checkout-web';
+<script src="../scripts/PrimerHeadless"></script>
 
-  await import('https://sdk.dev.primer.io/web/preview-1579/Primer.min.js');
-
-  const { Primer } = window as any as {
-    Primer: (typeof import('@primer-io/checkout-web'))['Primer'];
-  };
-
-  const { clientToken, cardNumberId, cardSecurityCodeId, cardExpiryId } = (
-    document.querySelector('#vars') as HTMLElement
-  ).dataset;
-
-  const primer = await Primer.createHeadless(clientToken || '');
-  const cardForm = document.querySelector('#card') as HTMLFormElement;
-  const assets = primer.getAssetsManager();
-  const cardNetworksElement = document.getElementById('card-networks')!;
-
-  primer.configure({
-    onCheckoutFail(error, data, handler) {
-      console.log(error);
-      handler?.showErrorMessage();
-      cardForm.querySelector('button')!.disabled = false;
-      const errorElement = document.querySelector('#error') as HTMLElement;
-      errorElement.style.display = '';
-      errorElement.innerText = error.message;
-    },
-    onCheckoutComplete(data) {
-      cardForm.innerText = `Payment successful.\nOrderId: ${data.payment.orderId}`;
-    },
-    async onAvailablePaymentMethodsLoad(paymentMethods) {
-      for (const paymentMethod of paymentMethods)
-        switch (paymentMethod.managerType) {
-          case 'CARD': {
-            const cardManager = await primer.createPaymentMethodManager(
-              'PAYMENT_CARD',
-              {
-                onCardNetworksChange({
-                  allowedCardNetworks,
-                  canSelectCardNetwork,
-                }: {
-                  allowedCardNetworks: { value: string }[];
-                  canSelectCardNetwork: boolean;
-                }) {
-                  cardNetworksElement.style.display = allowedCardNetworks.length
-                    ? ''
-                    : 'none';
-                  cardNetworksElement.innerHTML = '';
-
-                  allowedCardNetworks.forEach(async ({ value }, index) => {
-                    const asset = await assets.getCardNetworkAsset(value);
-
-                    const label = document.createElement('label');
-                    label.style.display = 'flex';
-                    label.style.placeContent = 'center';
-                    label.style.placeItems = 'center';
-
-                    const input = document.createElement('input');
-                    input.ariaLabel = asset.alt;
-                    input.checked = !index;
-                    input.name = 'preferredNetwork';
-                    input.type = 'radio';
-                    input.value = value;
-                    input.style.margin = '4px';
-
-                    const img = document.createElement('img');
-                    img.alt = asset.alt;
-                    img.src = asset.src;
-
-                    if (canSelectCardNetwork) label.append(input);
-                    label.append(img);
-                    cardNetworksElement.append(label);
-                  });
-                },
-                onCardNetworksLoading() {
-                  cardNetworksElement.innerHTML = 'Loading card networks...';
-                },
-              },
-            );
-
-            const { cardNumberInput, cvvInput, expiryInput } =
-              cardManager?.createHostedInputs() ?? {};
-
-            cardForm.addEventListener('submit', (event) => {
-              event.preventDefault();
-              cardForm.querySelector('button')!.disabled = true;
-              cardManager?.submit();
-            });
-
-            const style: CheckoutStyle = {
-              input: {
-                base: {
-                  borderColor: 'gray',
-                  borderRadius: '2px',
-                  borderStyle: 'solid',
-                  borderWidth: '1px',
-                  height: '40px',
-                  paddingHorizontal: 8,
-                },
-              },
-            };
-
-            document.getElementById(cardNumberId!)!.innerHTML = '';
-            cardNumberInput?.render(cardNumberId || '', {
-              placeholder: '4321 1234 9876 6789',
-              style,
-            });
-
-            document.getElementById(cardSecurityCodeId!)!.innerHTML = '';
-            cvvInput?.render(cardSecurityCodeId || '', { style });
-
-            document.getElementById(cardExpiryId!)!.innerHTML = '';
-            expiryInput?.render(cardExpiryId || '', {
-              placeholder: '01/25',
-              style,
-            });
-
-            const cardholderName = document.querySelector(
-              '[name="card-name"]',
-            ) as HTMLInputElement;
-            cardholderName.addEventListener('input', () => {
-              cardManager?.setCardholderName(cardholderName.value || '');
-            });
-
-            break;
-          }
-          case 'NATIVE':
-          case 'REDIRECT': {
-            // ignoring these types for simplicity in this example.
-            // make sure you implement them in case you're using such payment types.
-            break;
-          }
-          default:
-            throw new Error(
-              `Type of payment method manager not supported: ${paymentMethod.managerType}`,
-            );
-        }
-    },
-  });
-
-  primer.start();
-</script>
-
-<style>
+<style lang="scss">
   main {
     background-color: #eee;
     display: grid;
@@ -214,16 +64,6 @@ const cardExpiryId = 'card-expiry';
     width: 400px;
   }
 
-  label {
-    display: grid;
-  }
-
-  .row {
-    display: flex;
-    gap: 8px;
-    flex-flow: column wrap;
-  }
-
   button,
   input {
     height: 40px;
@@ -231,17 +71,43 @@ const cardExpiryId = 'card-expiry';
     width: 100%;
   }
 
-  #card-networks {
-    display: flex;
-    flex-wrap: wrap;
+  .row {
+    display: grid;
     gap: 8px;
-    min-height: 32px;
-    place-items: center;
+    grid-auto-flow: column;
+    align-items: center;
+  }
+
+  .flow {
+    display: flex;
+    gap: 8px;
+    flex-flow: row wrap;
   }
 </style>
 
-<style is:inline>
+<style is:global lang="scss">
   iframe {
     max-height: 40px;
+  }
+
+  #card-network {
+    label {
+      display: flex;
+      position: relative;
+    }
+
+    // place the input on top of the image so the browser's default input focus ring
+    // looks like it's the image
+    input {
+      appearance: none;
+      margin: 0;
+      position: absolute;
+      inset: 0;
+    }
+
+    // fade a bit the network not selected
+    input:not(:checked) + img {
+      opacity: 0.5;
+    }
   }
 </style>
