chore: introduce spinner

--- a/examples/features/cobadged/src/pages/index.astro
+++ b/examples/features/cobadged/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import '../styles/spinner.scss';
 ---
 
 <Layout title="Primer example: cobadged">
